plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.group7.recommenderapp'
    compileSdk 34

    defaultConfig {
        applicationId "com.group7.recommenderapp"
        minSdk 28
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'androidx.test:core:1.5.0'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'com.couchbase.lite:couchbase-lite-android-ee:3.1.3'
    implementation 'org.tensorflow:tensorflow-lite:2.5.0'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation("com.google.guava:guava:33.2.1-android")
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:3.12.4'
    testImplementation 'org.mockito:mockito-inline:3.12.4'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'com.microsoft.appcenter:espresso-test-extension:1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.6.1'
}